# lifeops

./: .env.example  .gitignore  LICENSE  Makefile  README.md  install.sh  life-ops-system.md
cloudflared/: config.yml.example
launchd/: com.lifeops.todos-agent.plist  com.lifeops.todos-mcp.plist
scripts/: bootstrap.sh  doctor.sh  init-todos-repo.sh  install-launchd.sh  migrate-reminders.sh  setup-tunnel.sh  uninstall-launchd.sh
templates/: contact.md  owner_context.example.md  todo.md
todos-agent/: README.md  pyproject.toml
todos-agent/todos_agent/: __init__.py  agent.py
todos-mcp/: README.md  pyproject.toml
todos-mcp/todos_mcp/: __init__.py  config.py  git_ops.py  github_ops.py  models.py  server.py  store.py
