[project]
name = "todos-agent"
version = "0.1.0"
description = "Hourly Claude Code SDK agent that works delegated Life Ops todos"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.0",
    "python-frontmatter>=1.1.0",
    "gitpython>=3.1.40",
    "PyGithub>=2.1.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.2.0",
]

[project.scripts]
todos-agent = "todos_agent.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["todos_agent"]
