[project]
name = "todos-mcp"
version = "0.1.0"
description = "MCP server for the Life Ops todos system"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "python-frontmatter>=1.1.0",
    "gitpython>=3.1.40",
    "PyGithub>=2.1.1",
    "python-slugify>=8.0.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
todos-mcp = "todos_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["todos_mcp"]
